cmake_minimum_required(VERSION 3.21)
project(C_Primer_Plus C)

set(CMAKE_C_STANDARD 99)

add_executable(C_Primer_Plus main.c)


add_executable(lethead1 Chapter9/lethead1.c)
add_executable(day_mon1 Chapter10/day_mon1.c)
add_executable(no_data Chapter10/no_data.c)
add_executable(some_data Chapter10/some_data.c)
add_executable(day_mon2 Chapter10/day_mon2.c)
add_executable(designate Chapter10/designate.c)
add_executable(bounds Chapter10/bounds.c)
add_executable(rain Chapter10/rain.c)
add_executable(pnt_add Chapter10/pnt_add.c)
add_executable(day_mon3 Chapter10/day_mon3.c)
add_executable(sum_arr1 Chapter10/sum_arr1.c)
add_executable(sum_arr2 Chapter10/sum_arr2.c)
add_executable(order Chapter10/order.c)
add_executable(ptr_ops Chapter10/ptr_ops.c)
add_executable(arf Chapter10/arf.c)